--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>A Basic HTML5 Template</title>
+  <title>Industrial Evolution</title>
   <meta name="description" content="">
   <meta name="author" content="">
   <meta http-equiv="refresh" content="0;URL=https://evolution.industrial.fm" />
 </head>
 <body>
-  <div style="text-align: center">Redirecting to https://evolution.industrial.fm ...</div>
+  <div style="text-align: center">Redirecting to <a href="https://evolution.industrial.fm">https://evolution.industrial.fm</a> ...</div>
 </body>
 </html>
